--- a/container/compose.yml
+++ b/container/compose.yml
@@ -78,8 +78,8 @@ services:
       KARAPACE_COMPATIBILITY: FULL
       KARAPACE_STATSD_HOST: statsd-exporter
       KARAPACE_STATSD_PORT: 8125
-      KARAPACE_KAFKA_SCHEMA_READER_STRICT_MODE: false
-      KARAPACE_KAFKA_RETRIABLE_ERRORS_SILENCED: true
+      KARAPACE_KAFKA_SCHEMA_READER_STRICT_MODE: "false"
+      KARAPACE_KAFKA_RETRIABLE_ERRORS_SILENCED: "true"
       KARAPACE_TAGS__APP: karapace-schema-registry
       KARAPACE_TELEMETRY__OTEL_ENDPOINT_URL: http://opentelemetry-collector:4317
       KARAPACE_TELEMETRY__OTEL_METRICS_EXPORTER: OTLP
@@ -141,8 +141,8 @@ services:
       KARAPACE_COMPATIBILITY: FULL
       KARAPACE_STATSD_HOST: statsd-exporter
       KARAPACE_STATSD_PORT: 8125
-      KARAPACE_KAFKA_SCHEMA_READER_STRICT_MODE: false
-      KARAPACE_KAFKA_RETRIABLE_ERRORS_SILENCED: true
+      KARAPACE_KAFKA_SCHEMA_READER_STRICT_MODE: "false"
+      KARAPACE_KAFKA_RETRIABLE_ERRORS_SILENCED: "true"
       KARAPACE_TAGS__APP: karapace-schema-registry-follower
       KARAPACE_TELEMETRY__OTEL_ENDPOINT_URL: http://opentelemetry-collector:4317
       KARAPACE_TELEMETRY__OTEL_METRICS_EXPORTER: OTLP
