--- a/container/compose.yml
+++ b/container/compose.yml
@@ -231,9 +231,8 @@ services:
       - ../mypy.ini:/opt/karapace/mypy.ini
       - ../.pre-commit-config.yaml:/opt/karapace/.pre-commit-config.yaml
       - ../.coveragerc:/opt/karapace/.coveragerc
-      - ../.coverage.3.10:/opt/karapace/coverage/.coverage.3.10
-      - ../.coverage.3.11:/opt/karapace/coverage/.coverage.3.11
-      - ../.coverage.3.12:/opt/karapace/coverage/.coverage.3.12
+      - "../.coverage.$PYTHON_VERSION:/opt/karapace/coverage/.coverage.$PYTHON_VERSION"
+      - "../test-tmp.$PYTHON_VERSION:/opt/test-tmp"
     environment:
       - COVERAGE_FILE
       - COVERAGE_RCFILE=/opt/karapace/.coveragerc
