--- a/container/prometheus/prometheus.yml
+++ b/container/prometheus/prometheus.yml
@@ -14,15 +14,18 @@ rule_files:
 scrape_configs:
   - job_name: karapace-registry
     metrics_path: /metrics
+    scheme: https
+    tls_config:
+      ca_file: /opt/prometheus/certs/rootCA.pem
     static_configs:
       - targets:
-        - karapace-registry:8081
+        - karapace-schema-registry:8081
 
   - job_name: karapace-rest
     metrics_path: /metrics
     static_configs:
       - targets:
-        - karapace-rest:8082
+        - karapace-rest-proxy:8082
 
   - job_name: statsd-exporter
     metrics_path: /metrics
@@ -33,6 +36,7 @@ scrape_configs:
         - statsd-exporter:9102
 
   - job_name: opentelemetry-collector
+    metrics_path: /metrics
     static_configs:
       - targets:
-        - opentelemetry-collector:8888
+        - opentelemetry-collector:8889
