Remove pinned versions from toml

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ '3.10', '3.11', '3.12', '3.13' ]
+        python-version: [ '3.12', '3.13' ]
     steps:
     - uses: actions/checkout@v4
       # Need fetch-depth 0 to fetch tags, see https://github.com/actions/checkout/issues/701
