Remove pinned versions from toml

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,6 +1,5 @@
-ARG PYTHON_VERSION=3.10.11
+ARG PYTHON_VERSION=3.12
 
-# Current versions of avro and zstandard don't yet have wheels for 3.11.
 FROM python:${PYTHON_VERSION}-bullseye AS builder
 ARG KARAPACE_VERSION
 
@@ -24,7 +23,7 @@ RUN wget --progress=dot:giga "https://go.dev/dl/go${GO_VERSION}.linux-$(dpkg --p
 # intended behavior.
 COPY ./requirements/requirements.txt /build/
 RUN --mount=type=cache,target=/root/.cache/pip \
-    python3 -m pip install -r /build/requirements.txt
+    python3 -m pip install --no-dependencies -r /build/requirements.txt
 
 COPY . /build/karapace-repo
 WORKDIR /build/karapace-repo
@@ -59,7 +58,7 @@ ENV CAROOT=/opt/karapace/certs/ca
 
 # Setup files and directories.
 RUN mkdir -p /opt/karapace /opt/karapace/runtime /var/log/karapace /opt/karapace/coverage $CAROOT \
-&& touch /opt/karapace/coverage/.coverage.3.10 /opt/karapace/coverage/.coverage.3.11 /opt/karapace/coverage/.coverage.3.12 /opt/karapace/coverage/.coverage.3.13 \
+&& touch /opt/karapace/coverage/.coverage.3.12 /opt/karapace/coverage/.coverage.3.13 \
 && chown --recursive "$RUNNER_UID:$RUNNER_GID" /opt/karapace /opt/karapace/coverage /var/log/karapace
 
 # Install Java via openjdk-11
@@ -78,10 +77,10 @@ RUN git clone https://github.com/FiloSottile/mkcert . \
 
 WORKDIR /opt/karapace
 COPY ./requirements /opt/karapace/requirements
-RUN python3 -m pip install -r /opt/karapace/requirements/requirements-dev.txt -r /opt/karapace/requirements/requirements-typing.txt
+RUN python3 -m pip install --no-dependencies -r /opt/karapace/requirements/requirements-dev.txt -r /opt/karapace/requirements/requirements-typing.txt
 
 COPY . .
-RUN SETUPTOOLS_SCM_PRETEND_VERSION=$KARAPACE_VERSION python3 -m pip install .
+RUN SETUPTOOLS_SCM_PRETEND_VERSION=$KARAPACE_VERSION python3 -m pip install --no-deps .
 ENV PYTHONPATH="/opt/karapace/src:$PYTHONPATH"
 
 
