--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -10,7 +10,7 @@ aiohappyeyeballs==2.6.1
     # via aiohttp
 aiohttp==3.13.3
     # via karapace (/karapace/pyproject.toml)
-aiokafka==0.10.0
+aiokafka==0.12.0
     # via karapace (/karapace/pyproject.toml)
 aiosignal==1.4.0
     # via aiohttp
@@ -55,7 +55,7 @@ click==8.3.1
     #   rich-toolkit
     #   typer
     #   uvicorn
-confluent-kafka==2.10.0
+confluent-kafka==2.13.0
     # via karapace (/karapace/pyproject.toml)
 cramjam==2.11.0
     # via python-snappy
@@ -73,7 +73,7 @@ fastapi[standard]==0.128.0
     # via karapace (/karapace/pyproject.toml)
 fastapi-cli[standard]==0.0.20
     # via fastapi
-fastapi-cloud-cli==0.8.0
+fastapi-cloud-cli==0.9.0
     # via fastapi-cli
 fastar==0.8.0
     # via fastapi-cloud-cli
@@ -157,7 +157,7 @@ opentelemetry-semantic-conventions==0.60b1
     # via opentelemetry-sdk
 packaging==25.0
     # via aiokafka
-prometheus-client==0.23.1
+prometheus-client==0.24.0
     # via karapace (/karapace/pyproject.toml)
 propcache==0.4.1
     # via
@@ -222,7 +222,7 @@ rpds-py==0.30.0
     # via
     #   jsonschema
     #   referencing
-sentry-sdk==2.48.0
+sentry-sdk==2.49.0
     # via fastapi-cloud-cli
 shellingham==1.5.4
     # via typer
@@ -238,6 +238,7 @@ typer==0.21.1
     #   fastapi-cloud-cli
 typing-extensions==4.15.0
     # via
+    #   aiokafka
     #   aiosignal
     #   anyio
     #   dependency-injector
@@ -261,7 +262,7 @@ typing-inspection==0.4.2
     #   pydantic-settings
 ujson==5.11.0
     # via karapace (/karapace/pyproject.toml)
-urllib3==2.6.2
+urllib3==2.6.3
     # via
     #   requests
     #   sentry-sdk
@@ -276,7 +277,7 @@ watchfiles==1.1.1
     # via
     #   karapace (/karapace/pyproject.toml)
     #   uvicorn
-websockets==15.0.1
+websockets==16.0
     # via uvicorn
 xxhash==3.6.0
     # via karapace (/karapace/pyproject.toml)
