Improvements to consumer manager - rest

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ dependencies = [
   "rich",
   "tenacity",
   "typing-extensions",
-  "ujson",
+  "orjson",
+  "ujson",  # Keep as fallback
   "watchfiles",
   "xxhash",
   "zstandard",
