--- a/.github/workflows/container-smoke-test.yml
+++ b/.github/workflows/container-smoke-test.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ '3.12', '3.13' ]
+        python-version: [ '3.12', '3.13', '3.14' ]
     env:
       BUILDKIT_PROGRESS: plain
     steps:
